# Milk-Market-Intel-API

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  pytest.ini
backend/app/: main.py  router.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/modules/ai/: __init__.py  run_langchain_mvp.py
backend/app/modules/analytics/: __init__.py  aggregations.py  build_market_snapshot.py  export_market_snapshot_csv.py  export_plotly_graphs.py  exporters.py  exports.py  loaders.py  models.py  pandas_metrics.py  run_pandas_mvp.py
backend/app/modules/companies/: api.py  brand_models.py  models.py  models_discovered.py  price_models.py  product_models.py  repository.py  run_2gis_discovered_ingest.py  schemas.py
backend/app/modules/matching/: models.py  run_brand_company_matching.py
backend/app/modules/regions/: models.py  run_import_rosstat_regions.py
backend/app/modules/registry/: writer.py
backend/app/modules/retail/: brand_extraction.py  brand_models.py  export_brands_csv.py  export_products_csv.py  import_yandex_catalog.py  parsed_models.py  run_brand_extraction.py  run_product_parsing.py  writer.py  (+2 more)
backend/data/: rosstat_regions.csv
backend/migrations/: 0001_create_company_registry.sql  0002_create_retail_offers.sql  0003_create_retail_products_parsed.sql  0004_create_brands_raw.sql  0005_create_companies_discovered.sql  0006_create_brand_company_matches.sql  0007_create_market_snapshot.sql  0008_add_region_code_to_market_snapshot.sql
backend/scripts/: build_region_lr_map.py
backend/tests/: test_health.py
(+87 files in other folders)
