[project]
name = "milk-market-intel-backend"
version = "0.1.0"
description = "Market intelligence for milk industry (RF)"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "pandas>=2.2",
  "langchain>=0.3.7",
  "openai>=1.52.2",
  "langchain-openai>=0.2.8",
  "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
